--- a/discovery-server/Dockerfile
+++ b/discovery-server/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:17-jdk-slim
+FROM eclipse-temurin:11-jre
 VOLUME /tmp
-COPY target/*.jar app.jar
+COPY target/discovery-server-0.0.1-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
