--- a/discovery-server/src/main/resources/application-docker.yml
+++ b/discovery-server/src/main/resources/application-docker.yml
@@ -5,6 +5,8 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+  instance:
+    hostname: discovery-server
 
 spring:
   application:
