--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+
 
 services:
   postgres:
@@ -11,6 +11,8 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - naruto-network
 
   discovery-server:
     build: ./discovery-server
@@ -18,6 +20,10 @@ services:
       - "8761:8761"
     depends_on:
       - postgres
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - naruto-network
 
   api-gateway:
     build: ./api-gateway
@@ -25,6 +31,11 @@ services:
       - "8080:8080"
     depends_on:
       - discovery-server
+      - postgres
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - naruto-network
 
   ninja-service:
     build: ./ninja-service
@@ -34,7 +45,14 @@ services:
       - discovery-server
       - postgres
     environment:
+      - SPRING_PROFILES_ACTIVE=docker
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/ninja_db
+    networks:
+      - naruto-network
 
 volumes:
   postgres_data:
+
+networks:
+  naruto-network:
+    driver: bridge
