--- a/ninja-service/src/main/resources/application-docker.yml
+++ b/ninja-service/src/main/resources/application-docker.yml
@@ -5,12 +5,12 @@ spring:
   application:
     name: ninja-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/ninja_db
+    url: jdbc:postgresql://postgres:5432/ninja_db
     username: postgres
     password: password
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
@@ -19,4 +19,6 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://discovery-server:8761/eureka/
+  instance:
+    prefer-ip-address: true
